@@ -3,6 +3,7 @@ ddetect (1.16) UNRELEASED; urgency=low
   * Colin Watson
     - If udev is available, call udevstart at the end of hardware detection
       to make sure that device nodes are created synchronously.
+    - Don't break if no modules need to be loaded.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 20:47:21 +0100
 
